Created jar file and update readme